Replace try/catch blocks with assertj - dist
Replaced try/catch blocks in policy/distribution test cases with assertj assertions

Issue-ID: POLICY-2451
Change-Id: Ib7ecd13e39abd471bf1424d8a3db22c72ad1e3b8
Signed-off-by: waynedunican <wayne.dunican@est.tech>